# Catching-Smells

./: .gitignore  README.md  batch_gha_repair_verification.sh  batch_safety_verification.sh  readme.md
GHA-Autorepair/: README.md  todo-kor.md  todo.md
GHA-Autorepair/gha_repair_tool/: .env.example  README.md  README_TWO_PHASE.md  __init__.py  baseline_auto_repair.py  baseline_auto_repair_enhanced.py  batch_evaluator.py  batch_gha_repair.py  batch_two_phase_repair.py  failed_files_list.txt  main.py  prompts.md  requirements.txt  structural_safety_comparison_report.md
RQ3/: tool evaluation.xlsx
RQ3/gha-ci-detector/: make_result_table.py  pyproject.toml  readme.md  requirements.txt  result_table.csv  summarize_smell_results_by_file.py  yaml_crwaler.py  yaml_list.csv
RQ3/gha-ci-detector/.github/workflows/: abpframework_abp__angular.yml  parcel-bundler_parcel__ci.yml
RQ3/gha-ci-detector/data/: result_table_paper_250806.csv  result_table_paper_250829.csv  result_table_valid_false_250827.csv  result_table_valid_false_250828.csv  result_table_valid_true_250827.csv  result_table_valid_true_250828.csv
RQ3/gha-ci-detector/src/data_summary/: make_result_table.py
RQ3/gha-ci-detector/src/gha_ci_detector/: Job.py  Runner.py  Step.py  Workflow.py  __main__.py  cli.py  smell_detector.py  yamllintconf.yaml
RQ3/gha-ci-detector/yaml_files/: parcel-bundler_parcel__release.yml
RQ3/gha-ci-detector_paper/: requirements.txt
data/: result.json
smell_linter/: actionlint_result_250822.json  actionlint_results.json  actionlint_results_250814_01.json
(+529 files in other folders)
